added closeBtn func to bg layer for validation message

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="layer-5"></div>
+            <div class="layer-5" id="closeLayer"></div>
         </div>
         <table class="table table-light text-center">
             <thead class="fw-bold">
